add send verification email to employers API (#157)
